package com.project.core;

import java.util.List;

public abstract class Fingerprint {
    public abstract List<FrameFingerprint> getFrames();
}