' Generated by UML Generator
' Encoded: dLPDR-8m4BtdL_YOB4crvsY5Me6gHLhKLSjoD_44h1exYXsaxiT_Nt-4uDWfGbmGpBnvC_DcRFCe5MvLTsI9VAUymIq-eefXAP-KQkckKx2g17-Zlm5zJGwK0AfeMp584ej2JnsXufdoFRHDIxb2VnA4YbhJW2pH3ohLjsVpmuFC3QBG7xCmECqchTVPR0mcv3kM1mSjKGZAIdGIb1Za7fJroZJxjBv_IO9tKhMuKauC57PuAqqV7RYSI2UjfbWjI_IcbUPxOr9KCofyR4gaOSPoq5sLY0ddhmuTVpSXlTUg6BAd0N6EnhGvkf3coAVC-iwsZi2qDjHcx9ipZ_6u4epPAfyDLHhJmh6USOCIQwogmol8ZlKY785Gl2A-27hVQbq0h_GWYUXsUjaCq4I2dRBPXLu0qzbBNKjGOqsyF6cGGhSS9SXHJEzayyZFwgmTNwJEOg0rhg5o6-ApZyNR34ayEvKsmbXsGZ30t9DGd2YiGU4bLjWjewAAmRWQteuCf6knee8F6Ju0jo_rAsXk2O5sVe9qn9sZ4NEEHhmvYbcpI-6_EAqfaFDe6i4bkFfhoZ5RGaMbfRgK7M_7lQrfIHUja78BhQtY8gpswPrMdLo3b7W_uiRcAbfgAIZJI_6JDi0eXzvW0FQeNG4uHQSwJortwP-875cwaSqiNG4dp3giO642kUpahS6NQmyt3VimGoLcg4VzfHnlqXaxZ2jenargycpE9i_cB3wR3kXBx_G9KgLt7j0UDF1xksTlj3kUANULZgudQze49yxr4MQvvUMwvI7nR-NutjaE1NaktNdqD1V5txd_aiK8KHJHOvLCdjil6Xck-oJmuM7kh-GLaB-DIJImgFW8CLdy8t2Y_zty1m
' URL: http://www.plantuml.com/plantuml/uml/dLPDR-8m4BtdL_YOB4crvsY5Me6gHLhKLSjoD_44h1exYXsaxiT_Nt-4uDWfGbmGpBnvC_DcRFCe5MvLTsI9VAUymIq-eefXAP-KQkckKx2g17-Zlm5zJGwK0AfeMp584ej2JnsXufdoFRHDIxb2VnA4YbhJW2pH3ohLjsVpmuFC3QBG7xCmECqchTVPR0mcv3kM1mSjKGZAIdGIb1Za7fJroZJxjBv_IO9tKhMuKauC57PuAqqV7RYSI2UjfbWjI_IcbUPxOr9KCofyR4gaOSPoq5sLY0ddhmuTVpSXlTUg6BAd0N6EnhGvkf3coAVC-iwsZi2qDjHcx9ipZ_6u4epPAfyDLHhJmh6USOCIQwogmol8ZlKY785Gl2A-27hVQbq0h_GWYUXsUjaCq4I2dRBPXLu0qzbBNKjGOqsyF6cGGhSS9SXHJEzayyZFwgmTNwJEOg0rhg5o6-ApZyNR34ayEvKsmbXsGZ30t9DGd2YiGU4bLjWjewAAmRWQteuCf6knee8F6Ju0jo_rAsXk2O5sVe9qn9sZ4NEEHhmvYbcpI-6_EAqfaFDe6i4bkFfhoZ5RGaMbfRgK7M_7lQrfIHUja78BhQtY8gpswPrMdLo3b7W_uiRcAbfgAIZJI_6JDi0eXzvW0FQeNG4uHQSwJortwP-875cwaSqiNG4dp3giO642kUpahS6NQmyt3VimGoLcg4VzfHnlqXaxZ2jenargycpE9i_cB3wR3kXBx_G9KgLt7j0UDF1xksTlj3kUANULZgudQze49yxr4MQvvUMwvI7nR-NutjaE1NaktNdqD1V5txd_aiK8KHJHOvLCdjil6Xck-oJmuM7kh-GLaB-DIJImgFW8CLdy8t2Y_zty1m
' Generated on: 2026-04-13T10:09:02.230396700

@startuml
skinparam classAttributeIconSize 0
hide circle

class AudioFingerprint {
  -frames: List<FrameFingerprint>
  --
  +AudioFingerprint()
  +AudioFingerprint(frames: List<FrameFingerprint>)
  +addHash(frame: FrameFingerprint): void
  +getFrames(): List<FrameFingerprint>
}

abstract class Fingerprint {
  +getFrames(): List<FrameFingerprint>
}

class FrameFingerprint {
  -videoID: String
  -timestamp: int
  -hash: long
  -chunkID: int
  --
  +FrameFingerprint(videoID: String, timestamp: int, hash: long, chunkID: int)
  +getVideoID(): String
  +getTimestamp(): int
  +getHash(): long
  +getChunkID(): int
}

class MatchResult {
  -mediaId: String
  -confidence: double
  -matchedHashes: int
  -timeOffset: int
  --
  +MatchResult(mediaId: String, confidence: double, matchedHashes: int, timeOffset: int)
  +getMediaId(): String
  +getConfidence(): double
  +getMatchedHashes(): int
  +getTimeOffset(): int
  +isMatch(): boolean
}

class MovieMetaData {
  +title: String
  +genre: String
  +duration: int
  +yearOfRelease: int
  --
  +MovieMetaData(title: String, genre: String, duration: int, yearOfRelease: int)
}

class UnifiedMatchResponse {
  +finalDecision: String
  +mediaId: String
  +genre: String
  +duration: int
  +yearOfRelease: int
  +isCrossVerified: boolean
  +statusMessage: String
  +audioDetails: PipelineDetails
  +videoDetails: PipelineDetails
  --
  +UnifiedMatchResponse(audio: MatchResult, video: MatchResult)
  -evaluateConsensus(audio: MatchResult, video: MatchResult): void
  +applyMetadata(meta: MovieMetaData): void
}

class PipelineDetails {
  +confidence: double
  +matchedHashes: int
  +timeOffset: int
  +match: boolean
  --
  +PipelineDetails(confidence: double, matchedHashes: int, timeOffset: int, match: boolean)
}

class VideoFingerprint {
  -frames: List<FrameFingerprint>
  -videoId: String
  -videoTitle: String
  --
  +VideoFingerprint(frames: List<FrameFingerprint>)
  +getFrames(): List<FrameFingerprint>
  +getVideoId(): String
  +getVideoTitle(): String
}

AudioFingerprint --|> Fingerprint
AudioFingerprint o-- FrameFingerprint
UnifiedMatchResponse *-- PipelineDetails
UnifiedMatchResponse ..> MatchResult
UnifiedMatchResponse ..> MovieMetaData
VideoFingerprint --|> Fingerprint
VideoFingerprint o-- FrameFingerprint
@enduml